extra toevoeging 'over CoronaCheck' en ophaalcode voorbeeld eindigt op een 2

--- a/html-templates/zivver/zivver_example.html
+++ b/html-templates/zivver/zivver_example.html
@@ -15,7 +15,7 @@
             </h3>
             <p style="margin: 0 0 24px 0;">
                 Zet jouw testuitslag om in een testbewijs. Gebruik in de CoronaCheck-app ophaalcode:<br>
-                <strong>ZZZ-3839287252-F1</strong>
+                <strong>ZZZ-3839287252-F2</strong>
             </p>
             <div>
                 <a href="https://coronacheck.nl/app/redeem#ZZZ-3839287252-F1" target="_blank" rel="noopener noreferrer"
@@ -37,9 +37,9 @@
                    style="font-weight: 700;color: #000 !important;text-decoration: none;">CoronaCheck.nl/print</a>
             </p>
             <p style="margin: 0 0 24px 0;">
-                Heb je een vraag? Bel gratis
+                Heb je een vraag over CoronaCheck? Bel gratis
                 <a href="tel:0800-1421"
-                   style="font-weight: 700;color: #000 !important;text-decoration: none;">0800-1421</a> Of stuur een
+                   style="font-weight: 700;color: #000 !important;text-decoration: none;">0800-1421</a> of stuur een
                 e-mail naar
                 <a href="mailto:helpdesk@coronacheck.nl" target="_blank" rel="noopener noreferrer"
                    style="font-weight: 700;color: #000 !important;text-decoration: none;">helpdesk@coronacheck.nl</a>
