--- a/html-templates/portal/index.html
+++ b/html-templates/portal/index.html
@@ -202,7 +202,7 @@
                     <a href="mailto:helpdesk@coronacheck.nl" target="_blank" rel="noopener noreferrer">helpdesk@coronacheck.nl</a>
                 </p>
                 <div class="logo-corona-check">
-                    <img height="32" alt="CoronaCheck logo" src="images/coronacheck.svg"/>
+                    <img height="32" width="150" alt="CoronaCheck logo" src="images/coronacheck.png"/>
                 </div>
             </div>
         </div>
