fix: use example.com for example urls

--- a/html-templates/zivver/zivver_example.html
+++ b/html-templates/zivver/zivver_example.html
@@ -46,7 +46,7 @@
             </p>
             <div style="padding:0 0 24px 0">
                 <img height="32" alt="CoronaCheck logo"
-                     src="https://yourowncdn/images/coronacheck_32.png">
+                     src="https://yourowncdn.example.com/images/coronacheck_32.png">
             </div>
         </div>
     </div>
